--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,6 +3,13 @@
 search: false
 ---
 
+@font-face {
+    font-family: 'RobotoMono-Regular';
+    src: url('/assets/font/RobotoMono-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 @charset "utf-8";
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
