--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -1,7 +1,14 @@
 ---
-layout: archive
+layout: default
+title: "태그"
+permalink: /tags/
 ---
 
-{{ content }}
-
-{% include posts-taxonomy.html taxonomies=site.tags %}
+<h1>태그 목록</h1>
+<ul>
+  {% for tag in site.tags %}
+    <li>
+      <a href="/tag/{{ tag[0] | slugify }}">{{ tag[0] }} ({{ tag[1] | size }})</a>
+    </li>
+  {% endfor %}
+</ul>
