--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,7 +1,10 @@
 ---
 layout: archive
 ---
+<h2>목차</h2>
+<nav>
 {% include toc.html html=content %}
+</nav>
 {{ content }}
 
 <ul class="taxonomy__index">
