--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,10 +1,12 @@
 ---
-layout: archive
+layout: default
 ---
 
-{{ content }}
-
-{% assign entries_layout = page.entries_layout | default: 'list' %}
-<div class="entries-{{ entries_layout }}">
-  {% include posts-tag.html taxonomy=page.taxonomy type=entries_layout %}
-</div>
+<h1>태그: {{ page.tag }}</h1>
+<ul>
+  {% for post in page.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
