--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,13 @@
 ---
 layout: default
 ---
-{% include post.html %}
+<article class="post">
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+    <p class="post-meta">{{ page.date | date: site.date_format }} {% if page.author %} • {{ page.author }}{% endif %}</p>
+  </header>
+
+  <div class="post-content">
+    {{ content }}
+  </div>
+</article>
