--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,6 @@ layout: default
   </header>
 
   <div class="post-content">
-    {{ content }}
+    {{ content | markdownify }}
   </div>
 </article>
